--- a/ee-measurment-list.html
+++ b/ee-measurment-list.html
@@ -6,9 +6,11 @@
 <link rel="import" href="../paper-menu/paper-menu.html">
 <link rel="import" href="../paper-item/paper-item.html">
 <link rel="import" href="../paper-tooltip/paper-tooltip.html">
+<link rel="import" href="../paper-fab/paper-fab.html">
 
-<!-- Shared -->
-<link rel="import" href="../ee-helper-behaviors/ee-helper-behavior.html">
+<!-- Elfy -->
+<link rel="import" href="../ee-helper-behavior/ee-helper-behavior.html">
+<link rel="import" href="../ee-shared-styles/shared-styles.html">
 
 <!-- Third -->
 <link rel="import" href="../paper-fab-transitions/paper-fab-transitions.html">
