--- a/ee-measurment-list.html
+++ b/ee-measurment-list.html
@@ -115,7 +115,8 @@
 
         measurmentList: {
           type: Array,
-          value() { return [] }
+          value() { return [] },
+          notify: true,
         },
 
         hasMeasurments: {
